--- a/main/www/index.html
+++ b/main/www/index.html
@@ -1,15 +1,90 @@
-<!DOCTYPE html>
-<html lang=en>
-    <head>
-        <meta charset=utf-8>
-        <meta http-equiv=X-UA-Compatible content="IE=edge">
-        <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>OpenPyrojet Jetpack</title>
-    </head>
-<body>
-<noscript><strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
-<div id=app>
-    Hello, World
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="OpenPyrojet">
+    <title>Jetpack for OpenPyrojet</title>
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <script src="jquery-3.6.0.min.js"></script>
+</head>
+
+<body class="bg-light">
+
+<header>
+    <nav class="navbar navbar-dark mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand mb-0 h1">Jetpack Wifi Configuration</a>
+        </div>
+    </nav>
+</header>
+
+<main role="main">
+    <!-- Configuration -->
+    <div class="container mb-4">
+        <div class="card mb-4">
+            <div class="card-body">
+                <form class="form-vertical">
+                    <div class="mb-3">
+                        <label for="WifiSsid" class="form-label">Wi-Fi network name (SSID)</label>
+                        <input type="text" class="form-control" id="WifiSsid">
+                    </div>
+                    <div class="mb-3">
+                        <label for="WifiPassword" class="form-label">Wi-Fi Password</label>
+                        <input type="password" class="form-control" id="WifiPassword">
+                    </div>
+                    <div class="mb-3">
+                        <label for="WifiPasswordRepeat" class="form-label">Wi-Fi Password (repeat)</label>
+                        <input type="password" class="form-control" id="WifiPasswordRepeat">
+                    </div>
+                    <button id="Save" type="button" class="btn btn-primary">Save</button>
+                </form>
+            </div>
+        </div>
+        <div id="SysInfo" class="visually-hidden" />
+    </div>
+</main>
+
 </body>
 </html>
+
+<script>
+
+$(document).ready(function() {
+    $('#Save').click(function () {
+        let wifiSsidElement = $('#WifiSsid');
+        let wifiPasswordElement = $('#WifiPassword');
+        let wifiPasswordRepeatElement = $('#WifiPasswordRepeat');
+
+        let wifiSsid = wifiSsidElement.val();
+        if (wifiSsid === "") {
+            alert("Wi-Fi network cannot be empty");
+            return;
+        }
+
+        let wifiPassword = wifiPasswordElement.val();
+        let wifiPasswordRepeat = wifiPasswordRepeatElement.val();
+        if (wifiPassword !== wifiPasswordRepeat) {
+            alert('Wi-Fi passwords do not match');
+            return;
+        }
+
+        let wifiData = {
+            'ssid': wifiSsid,
+            'password': wifiPassword
+        };
+        let wifiPostBody = JSON.stringify(wifiData);
+        $.ajax('/api/wifi', {
+            data: wifiPostBody,
+            contentType: 'application/json',
+            type: 'PUT'
+        }).done(function () {
+            alert("Configuration saved. Please reboot the ESP32.");
+        }).fail(function () {
+            alert("Failed to save");
+        });
+    })
+});
+
+</script>
