--- a/main/www/index.html
+++ b/main/www/index.html
@@ -2,48 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="OpenPyrojet">
     <title>Jetpack for OpenPyrojet</title>
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="pure-min.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
-<body class="bg-light">
+<body class="bg-light" style="margin: 16px">
 
 <header>
-    <nav class="navbar navbar-dark mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1">Jetpack Wifi Configuration</a>
-        </div>
-    </nav>
+    <h2>Jetpack WiFi Configuration</h2>
 </header>
 
-<main role="main">
-    <!-- Configuration -->
-    <div class="container mb-4">
-        <div class="card mb-4">
-            <div class="card-body">
-                <form class="form-vertical">
-                    <div class="mb-3">
-                        <label for="WifiSsid" class="form-label">Wi-Fi network name (SSID)</label>
-                        <input type="text" class="form-control" id="WifiSsid">
-                    </div>
-                    <div class="mb-3">
-                        <label for="WifiPassword" class="form-label">Wi-Fi Password</label>
-                        <input type="password" class="form-control" id="WifiPassword">
-                    </div>
-                    <div class="mb-3">
-                        <label for="WifiPasswordRepeat" class="form-label">Wi-Fi Password (repeat)</label>
-                        <input type="password" class="form-control" id="WifiPasswordRepeat">
-                    </div>
-                    <button id="Save" type="button" class="btn btn-primary">Save</button>
-                </form>
-            </div>
-        </div>
-        <div id="SysInfo" class="visually-hidden" />
-    </div>
+<main>
+    <form class="pure-form pure-form-stacked">
+        <fieldset>
+            <label for="WifiSsid">Wi-Fi network name (SSID)</label>
+            <input type="text" id="WifiSsid">
+
+            <label for="WifiPassword" >Wi-Fi Password</label>
+            <input type="password" id="WifiPassword">
+
+            <label for="WifiPasswordRepeat">Wi-Fi Password (repeat)</label>
+            <input type="password" id="WifiPasswordRepeat">
+
+            <button id="Save" type="button" class="pure-button pure-button-primary" style="margin-top: 16px;">Save</button>
+        </fieldset>
+    </form>
+</div>
 </main>
 
 </body>
